--- a/Android-Gui-Test/layout/activity_main.xml
+++ b/Android-Gui-Test/layout/activity_main.xml
@@ -69,14 +69,63 @@
             android:gravity="center"
             android:orientation="vertical"
             android:id="@+id/weeklayout">
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Sundayevents"
+                android:text="Sunday"
+                >
+            </Button>
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Mondayyevents"
+                android:text="Monday"
+                >
+            </Button>
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Tuesdayevents"
+                android:text="Tuesday"
+                >
+            </Button>
+            <Button
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Wednesdayevents"
+                android:text="Wednesday"
+                >
+            </Button>
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Thursdayevents"
+                android:text="Thursday"
+                >
+            </Button>
+            <Button
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Fridayevents"
+                android:text="Friday"
+                >
+            </Button>
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Saturdayevents"
+                android:text="Saturday"
+                >
+            </Button>
             <TextView
-                android:layout_marginTop="-250dp"
+                android:layout_marginTop="-450dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Week View"
-                android:textColor="#191975"
+                android:textColor="#491975"
                 android:textSize="25dp"
-                android:textStyle="italic" >
+                >
             </TextView>
 
         </LinearLayout>
