--- a/Android-Gui-Test/layout/activity_main.xml
+++ b/Android-Gui-Test/layout/activity_main.xml
@@ -14,18 +14,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Button
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="Add Event"
-           android:id="@+id/add"
-           />
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Add Event"
+    android:id="@+id/add"/>
+
     </LinearLayout>
     <ViewFlipper
         android:id="@+id/viewflipper"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_margin="6dp" >
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -35,7 +36,7 @@
             >
             <CalendarView
                 android:layout_width="wrap_content"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
                 android:id="@+id/calendar"
                 >
@@ -43,10 +44,35 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-450dp"
+                android:layout_marginTop="-550dp"
                 android:text="Month View"
                 android:textColor="#b7102f"
-                android:textSize="25sp"
+                android:textSize="25sp">
+
+            </TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:id="@+id/daylayout"
+            >
+            <ListView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:id="@+id/dayevents"
+                android:layout_marginTop="50dp"
+                >
+            </ListView>
+            <TextView
+                android:layout_marginTop="-550dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Day View"
+                android:textColor="#191975"
+                android:textSize="25dp"
+                android:textStyle="italic"
                 >
             </TextView>
         </LinearLayout>
@@ -115,38 +141,6 @@
                 >
             </TextView>
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:id="@+id/daylayout"
-            >
-
-            <ListView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/dayevents"
-                android:layout_marginTop="-100dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                >
-
-            </ListView>
-            <TextView
-                android:layout_marginTop="-300dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Day View"
-                android:textColor="#191975"
-                android:textSize="25dp"
-                android:textStyle="italic"
-                android:focusable="false"
-                android:descendantFocusability="blocksDescendants"
-                >
-            </TextView>
         </LinearLayout>
     </ViewFlipper>
 
