--- a/Android-Gui-Test/layout/activity_main.xml
+++ b/Android-Gui-Test/layout/activity_main.xml
@@ -37,8 +37,10 @@
             <CalendarView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="150dp"
                 android:id="@+id/calendar"
+                android:scaleY="1.3"
+                android:layout_marginBottom="203dp"
                 >
             </CalendarView>
             <TextView
@@ -69,7 +71,7 @@
                 android:layout_marginTop="-550dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Day View"
+                android:text="Today's Events"
                 android:textColor="#191975"
                 android:textSize="25dp"
                 android:textStyle="italic"
@@ -135,7 +137,7 @@
                 android:layout_marginTop="-450dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Week View"
+                android:text="This Week's Events"
                 android:textColor="#491975"
                 android:textSize="25dp"
                 >
